Add kubectl cheats

--- a/.parser/md.template
+++ b/.parser/md.template
@@ -1,12 +1,14 @@
 ---
-keywords: ["cheat", "sheet", "cheatsheet"${KW}]
-slug: "${SLUG}"
+keywords: [cheat, sheet, cheatsheet${KW}]
+slug: ${SLUG}
+title: ${NAME} | ${PATH}Cheat Sheets | Tech-Notes
+sidebar_label: ${NAME} Cheats
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# ${TITLE} Cheats
+# ${NAME} Cheats
 
 ${DESCRIPTION}
 
